# NetWatch

./: .gitignore  CMakeLists.txt  CMakePresets.json  CommitMsg.txt  README.md  exts.txt  main.cpp
agent/: main.cpp
agent/include/: process_monitor.hpp  system_monitor.hpp
agent/src/: process_monitor.cpp  system_monitor.cpp
common/: message_types.hpp  types.hpp
dashboard/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
dashboard/widgets/: device_card.cpp  device_card.hpp  process_table.cpp  process_table.hpp
networking/: test_server.cpp
networking/include/: client.hpp  connection.hpp  protocol.hpp  server.hpp
networking/src/: client.cpp  connection.cpp  protocol.cpp  server.cpp
tests/: test_connection.cpp  test_protocol.cpp
